src/test/resources/semantic_errors/return_double_main.notc
void main() {
    return 3.4;
}
